# riscv-codec

./: .gitignore  Cargo.toml  README.md  flake.nix  input
examples/: all-u32.rs  disassemble.rs  fuzz.rs  simple.rs  size.rs
proc-macros/: Cargo.toml  README.md
proc-macros/src/: lib.rs
src/: assembly.rs  cinstruction.rs  immediates.rs  instruction.rs  lib.rs  main.rs  opcode.rs  register.rs
tests/: a-extension.rs  base-isa.rs  c-extension.rs  d-extension.rs  f-extension.rs  m-extension.rs  zicsr-extension.rs  zifencei-extension.rs
