[package]
name = "riscv-codec"
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "Decode/Encode and Assemble/Disassemble RISC-V instructions"
repository = "https://github.com/RebelAndroid/riscv-disassembler"
readme = "README.md"

[dependencies]

[dependencies.riscv-codec-proc-macros]
path = "proc-macros"
version = "0.1.0"